objects/ASI_CRM_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Audit_Trails_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New__c</fullName>
        <label>New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original__c</fullName>
        <label>Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Audit_Trail</fullName>
        <active>true</active>
        <label>ASI_CRM_MO_Audit_Trail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>